@@ -94,7 +94,7 @@ public class ZButtonLoader extends ZUtils implements Loader<Button> {
         ButtonManager buttonManager = this.plugin.getButtonManager();
         Optional<ButtonLoader> optional = buttonManager.getLoader(buttonType);
 
-        if (!optional.isPresent()) {
+        if (optional.isEmpty()) {
             throw new InventoryButtonException("Impossible to find the type " + buttonType + " for the button " + path + " in inventory " + this.file.getAbsolutePath());
         }
 
@@ -143,7 +143,7 @@ public class ZButtonLoader extends ZUtils implements Loader<Button> {
         if (this.matrix.containsKey(currentChar)) {
             slots = this.matrix.get(currentChar);
             if (slots.size() == 1) {
-                slot = slots.get(0);
+                slot = slots.getFirst();
                 slots = new ArrayList<>();
             }
         }
